attached_assets/Pasted-Skip-to-content-Keyboard-Repository-navigation-Code-Iss_1772608879859.txt
Skip to content
Keyboard
Repository navigation
Code
Issues
Actions
Make Apk CI
Update workflow and manifest for successful APK builds #4
Annotations
1 error
Build-Apk
failed 1 minute ago in 53s
1s
1s
0s
1s
4s
39s
> Task :parseDebugLocalResources
> Task :checkDebugDuplicateClasses
> Task :mergeLibDexDebug
> Task :mergeDebugJniLibFolders
> Task :mergeDebugNativeLibs NO-SOURCE
> Task :stripDebugDebugSymbols NO-SOURCE
> Task :validateSigningDebug
> Task :mergeDebugAssets
> Task :writeDebugAppMetadata
> Task :writeDebugSigningConfigVersions
> Task :compressDebugAssets
> Task :desugarDebugFileDependencies
> Task :mergeDebugResources
> Task :processDebugResources

> Task :compileDebugJavaWithJavac FAILED
/home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:143: error: class, interface, or enum expected
import android.content.Intent;
^
/home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:144: error: class, interface, or enum expected
import android.net.Uri;
^
/home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:145: error: class, interface, or enum expected
import android.os.Build;
^
/home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:146: error: class, interface, or enum expected
import android.provider.Settings;
^
/home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:147: error: class, interface, or enum expected
import android.os.Bundle;
^
5 errors

> Task :mergeExtDexDebug
gradle/actions: Writing build results to /home/runner/work/_temp/.gradle-actions/build-results/__run_2-1772608633554.json

[Incubating] Problems report is available at: file:///home/runner/work/Keyboard/Keyboard/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  /home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:143: error: class, interface, or enum expected
  import android.content.Intent;
  ^
  /home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:144: error: class, interface, or enum expected
  import android.net.Uri;
  ^
  /home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:145: error: class, interface, or enum expected
  import android.os.Build;
  ^
  /home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:146: error: class, interface, or enum expected
  import android.provider.Settings;
  ^
32 actionable tasks: 32 executed
Configuration cache entry stored.
  /home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/LauncherActivity.java:147: error: class, interface, or enum expected
  import android.os.Bundle;
  ^
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 39s
Error: Process completed with exit code 1.
0s
0s
5s
0s
0s
0s
